# PandoraLauncher

./: Cargo.toml
.github/workflows/: cd.yml
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_handler.rs  install_content.rs  instance.rs  mod_metadata.rs
crates/bridge/src/: handle.rs  instance.rs  message.rs  modal_action.rs
crates/frontend/src/: interface_config.rs  ui.rs
crates/frontend/src/component/: page_path.rs
crates/frontend/src/pages/: modrinth_page.rs  syncing_page.rs
crates/frontend/src/pages/instance/: instance_page.rs  mods_subpage.rs  quickplay_subpage.rs
crates/pandora_launcher/: Cargo.toml
crates/schema/src/: backend_config.rs  lib.rs
locales/: en.yml
scripts/: build_linux.sh  build_mac.sh  build_windows.sh
src/: bridge.rs  main.rs  panic.rs
src/backend/: backend.rs  instance.rs  launch.rs  mod.rs
src/backend/metadata/: manager.rs  mod.rs
src/backend/metadata/schemas/: java_runtime_component.rs  java_runtimes.rs  mod.rs  version.rs  version_manifest.rs
src/frontend/: mod.rs  root.rs  ui.rs
src/frontend/component/: progress_bar.rs
src/frontend/entity/: instance.rs  mod.rs  version.rs
src/frontend/instance/: instance_list.rs  instance_page.rs  mod.rs
src/frontend/pages/: debug_page.rs  mod.rs
