[package]
name = "LauncherExperiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atomic-time = "0.1.5"
backtrace = "0.3.76"
chrono = "0.4.42"
daedalus = "0.2.3"
directories = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
gpui = "0.2.1"
gpui-component = "0.2.0"
hex = "0.4.3"
hyper-util = "0.1.17"
indexmap = { version = "2.12.0", features = ["serde"] }
lexical-sort = "0.3.1"
os_info = "3.12.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
rust-embed = "8.7.2"
rust-i18n = "3.1.5"
rust-lzma = "0.6.0"
serde = "1.0.228"
serde-untagged = "0.1.9"
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
